force-app/main/default/objects/Account/fields/Campos_cumplimentados__c.field-meta.xml
<CustomField>
    <fullName>Campos_cumplimentados__c</fullName>
    <formula>AND(NOT(ISBLANK(Name)),
					NOT(ISBLANK(Phone)),
					NOT(ISBLANK(ERUM_Email__c)),
					NOT(ISBLANK(TEXT(Grupo_contable_negocio__c))),
					NOT(ISBLANK(TEXT(Grupo_Contable_Cliente__c))),
					NOT(ISBLANK(TEXT(ERUM_Terminos_de_pago__c))),
					NOT(ISBLANK(TEXT(ERUM_Forma_de_pago__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campos cumplimentados</label>
    <type>Checkbox</type>
</CustomField>