force-app/main/default/objects/Account/fields/Dias_Asegurado_CYC__c.field-meta.xml
<CustomField>
    <fullName>Dias_Asegurado_CYC__c</fullName>
    <label>Días asegurado CYC</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>