force-app/main/default/objects/Account/fields/Email_Responsable_Financiero__c.field-meta.xml
<CustomField>
    <fullName>Email_Responsable_Financiero__c</fullName>
    <defaultValue>&apos;riesgos@erumgroup.com&apos;</defaultValue>
    <label>Email Responsable Financiero</label>
    <type>Email</type>
</CustomField>