force-app/main/default/objects/Account/fields/ERUM_Codigo_cliente_ERP__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Codigo_cliente_ERP__c</fullName>
    <externalId>true</externalId>
    <label>Código cliente ERP</label>
    <length>225</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>