force-app/main/default/objects/Account/fields/ERUM_Comercial_asignado__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Comercial_asignado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comercial asignado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>