force-app/main/default/objects/Account/fields/ERUM_Detalle_Motivos__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Detalle_Motivos__c</fullName>
    <label>Detalle Motivos</label>
    <type>TextArea</type>
</CustomField>