force-app/main/default/objects/Account/fields/ERUM_Domiciliacion__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Domiciliacion__c</fullName>
    <label>Domiciliación</label>
    <length>20</length>
    <type>Text</type>
</CustomField>