force-app/main/default/objects/Account/fields/ERUM_Estado__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ERUM_Estado</valueSetName>
    </valueSet>
</CustomField>