force-app/main/default/objects/Account/fields/ERUM_Fecha_Activo_ERP__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Fecha_Activo_ERP__c</fullName>
    <label>Fecha Activo ERP</label>
    <type>Date</type>
</CustomField>