force-app/main/default/objects/Account/fields/ERUM_Fecha_envio_ERP__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Fecha_envio_ERP__c</fullName>
    <label>Fecha envío ERP</label>
    <type>Date</type>
</CustomField>