force-app/main/default/objects/Account/fields/ERUM_Importe_Concedido__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Importe_Concedido__c</fullName>
    <label>Importe Concedido</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>