force-app/main/default/objects/Account/fields/ERUM_Importe_solicitado__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Importe_solicitado__c</fullName>
    <label>Importe solicitado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3.000</fullName>
            </value>
            <value>
                <fullName>6.000</fullName>
            </value>
            <value>
                <fullName>12.000</fullName>
            </value>
            <value>
                <fullName>30.000</fullName>
            </value>
            <value>
                <fullName>60.000</fullName>
            </value>
            <value>
                <fullName>120.000</fullName>
            </value>
            <value>
                <fullName>500.000</fullName>
            </value>
            <value>
                <fullName>1.000.000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>