force-app/main/default/objects/Account/fields/ERUM_Movil__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Movil__c</fullName>
    <label>Móvil</label>
    <length>12</length>
    <type>Text</type>
</CustomField>