force-app/main/default/objects/Account/fields/ERUM_Numero_de_cuenta__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Numero_de_cuenta__c</fullName>
    <label>Nº de cuenta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>