force-app/main/default/objects/Account/fields/ERUM_Razon_de_desestimacion__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Razon_de_desestimacion__c</fullName>
    <label>Razón de desestimación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Razon_de_desestimacion</valueSetName>
    </valueSet>
</CustomField>