force-app/main/default/objects/Account/fields/ERUM_Sigla_CIF_Europeo__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Sigla_CIF_Europeo__c</fullName>
    <label>Sigla CIF Europeo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>