force-app/main/default/objects/Account/fields/ERUM_Tipo_cliente__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Tipo_cliente__c</fullName>
    <label>Tipo cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_cliente</valueSetName>
    </valueSet>
</CustomField>