force-app/main/default/objects/Account/fields/Fecha_Exp_CYC__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Exp_CYC__c</fullName>
    <label>Fecha Expediente CYC</label>
    <type>Date</type>
</CustomField>