force-app/main/default/objects/Account/fields/Grupo_Contable_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Contable_Cliente__c</fullName>
    <label>Grupo Contable Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grupo_Contable_Cliente</valueSetName>
    </valueSet>
</CustomField>