force-app/main/default/objects/Account/fields/Grupo_registro_IVA_negocio__c.field-meta.xml
<CustomField>
    <fullName>Grupo_registro_IVA_negocio__c</fullName>
    <defaultValue>&apos;Sin datos&apos;</defaultValue>
    <label>Grupo registro IVA negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grupo_registro_IVA_negocio</valueSetName>
    </valueSet>
</CustomField>