force-app/main/default/objects/Account/fields/Limite_Credito_CYC__c.field-meta.xml
<CustomField>
    <fullName>Limite_Credito_CYC__c</fullName>
    <label>Límite de crédito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>