force-app/main/default/objects/Account/fields/Num_Exp_CYC__c.field-meta.xml
<CustomField>
    <fullName>Num_Exp_CYC__c</fullName>
    <label>Núm. Exped. CYC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>