force-app/main/default/objects/Account/fields/Numero_cliente_ERP__c.field-meta.xml
<CustomField>
    <fullName>Numero_cliente_ERP__c</fullName>
    <externalId>true</externalId>
    <label>Número cliente ERP</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>