force-app/main/default/objects/Account/fields/TarifasIncluidas__c.field-meta.xml
<CustomField>
    <fullName>TarifasIncluidas__c</fullName>
    <label>Tarifas incluidas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>