force-app/main/default/objects/Account/recordTypes/ClientePotencialRetail.recordType-meta.xml
<RecordType>
    <fullName>ClientePotencialRetail</fullName>
    <active>true</active>
    <description>Tipo de registro para almacenar clientes potenciales pertenecientes a la empresa de retail</description>
    <label>Cliente Potencial Retail</label>
</RecordType>