force-app/main/default/objects/Account/recordTypes/ClientePotencialSeguridadVial.recordType-meta.xml
<RecordType>
    <fullName>ClientePotencialSeguridadVial</fullName>
    <active>true</active>
    <description>Tipo de registro para almacenar clientes potenciales pertenecientes a la empresa de seguridad vial</description>
    <label>Cliente Potencial Seguridad Vial</label>
</RecordType>