force-app/main/default/objects/Account/recordTypes/ClienteRetail.recordType-meta.xml
<RecordType>
    <fullName>ClienteRetail</fullName>
    <active>true</active>
    <description>Tipo de registro para almacenar clientes pertenecientes a la empresa de retail</description>
    <label>Cliente Retail</label>
</RecordType>