force-app/main/default/objects/Account/recordTypes/ClienteSeguridadVial.recordType-meta.xml
<RecordType>
    <fullName>ClienteSeguridadVial</fullName>
    <active>true</active>
    <description>Tipo de registro para almacenar clientes pertenecientes a la empresa de seguridad vial</description>
    <label>Cliente Seguridad Vial</label>
</RecordType>