force-app/main/default/objects/Account/recordTypes/ERUM_Cliente.recordType-meta.xml
<RecordType>
    <fullName>ERUM_Cliente</fullName>
    <active>true</active>
    <label>Cliente</label>
</RecordType>