force-app/main/default/objects/Account/recordTypes/ERUM_Cliente_Potencial.recordType-meta.xml
<RecordType>
    <fullName>ERUM_Cliente_Potencial</fullName>
    <active>true</active>
    <label>Cliente Potencial</label>
</RecordType>