force-app/main/default/objects/Account/validationRules/billing_adress_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>billing_adress_obligatorio</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK (BillingAddress)</errorConditionFormula>
    <errorMessage>Campo dirección obligatorio</errorMessage>
</ValidationRule>