force-app/main/default/objects/Account/validationRules/cif_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>cif_obligatorio</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK ( ERUM_CIF_Europeo__c )</errorConditionFormula>
    <errorDisplayField>ERUM_CIF_Europeo__c</errorDisplayField>
    <errorMessage>CIF Obligatorio</errorMessage>
</ValidationRule>