force-app/main/default/objects/Account/validationRules/obligatorio_codigo_erp.validationRule-meta.xml
<ValidationRule>
    <fullName>obligatorio_codigo_erp</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(AND(ISNEW(), ISBLANK(ERUM_Codigo_cliente_ERP__c )))</errorConditionFormula>
    <errorMessage>Código cliente ERP vacío, por favor, envía cliente a ERP</errorMessage>
</ValidationRule>