force-app/main/default/objects/Account/validationRules/Obligatorio_si_estado_es_desestimado.validationRule-meta.xml
<ValidationRule>
    <fullName>Obligatorio_si_estado_es_desestimado</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( ERUM_Estado__c, &apos;Desestimado&apos;) &amp;&amp; ISBLANK(TEXT( ERUM_Razon_de_desestimacion__c ))</errorConditionFormula>
    <errorDisplayField>ERUM_Razon_de_desestimacion__c</errorDisplayField>
    <errorMessage>Especifica por favor</errorMessage>
</ValidationRule>