force-app/main/default/objects/Account/validationRules/Obligatorio_si_estado_es_recomendacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Obligatorio_si_estado_es_recomendacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( ERUM_Canal_de_Origen__c  , &apos;Recomendacion&apos;) || ISPICKVAL( ERUM_Canal_de_Origen__c  , &apos;Gerencia&apos;),ISBLANK( ERUM_Recomendado_por__c ))</errorConditionFormula>
    <errorDisplayField>ERUM_Recomendado_por__c</errorDisplayField>
    <errorMessage>Especifica por favor</errorMessage>
</ValidationRule>