force-app/main/default/objects/Account/validationRules/phone_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_obligatorio</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK (Phone)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Campo teléfono obligatorio</errorMessage>
</ValidationRule>