force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ERUM_Codigo_cliente_ERP__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ERUM_Email__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ERUM_CIF_Europeo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Cuentas</label>
</ListView>