force-app/main/default/objects/Account/listViews/Cliente_potencial.listView-meta.xml
<ListView>
    <fullName>Cliente_potencial</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.ERUM_Cliente_Potencial</value>
    </filters>
    <label>Cliente potencial</label>
</ListView>