force-app/main/default/objects/Account/listViews/TEST.listView-meta.xml
<ListView>
    <fullName>TEST</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ERUM_Codigo_cliente_ERP__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>TEST</label>
</ListView>